# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: pyci.yml
page_analyzer/: app.py  check.py  database.py  url_functions.py
page_analyzer/templates/: added_url.html  check_urls.html  index.html  layout.html  urls.html
