[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Iulia Lesnikova <lesnikova.j00@gmail.com>"]
readme = "README.md"
packages = [
  { include = "page_analyzer" },
]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
requests = "^2.32.2"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
gunicorn = "^22.0.0"
flask = "^3.0.3"
flake8 = "^7.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
